<resources>
    <string name="app_name">Community</string>
    <string name="welcome">Welcome TO Community..</string>
    <string name="email">Email</string>
    <string name="f_name">FirstName</string>
    <string name="l_name">LastName</string>
    <string name="password">Password</string>
    <string name="email1">Email :</string>
    <string name="pass">Password :</string>
    <string name="login">Login</string>
    <string name="already_have_account">Already have Account..</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstname">Firstname :</string>
    <string name="lastname">Lastname :</string>
    <string name="create_an_account">Create An Account…</string>
    <string name="maplink">Click To See In Google Map.....</string>
    <string name="delete_account">Delete Account</string>
    <string name="favourite">Favourite</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="community">Community</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email_id">Email Id</string>
    <string name="my_profile">My Profile</string>
    <string name="username">UserName</string>
    <string name="theme">Theme</string>
</resources>