<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Authentication.Registration_Fragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layoutCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <LinearLayout
                android:id="@+id/nestedLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="FirstName"
                    app:endIconMode="clear_text"
                    app:helperText="Required*"
                    app:helperTextTextColor="#CD1515"
                    app:startIconDrawable="@drawable/baseline_account_circle_24">

                    <EditText
                        android:id="@+id/editText_firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:importantForAutofill="yes"
                        android:inputType="text"
                        android:padding="10dp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nestedLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTextInputLayout1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="LastName"
                    app:endIconMode="clear_text"
                    app:helperText="Required*"
                    app:helperTextTextColor="#CD1515"
                    app:startIconDrawable="@drawable/baseline_account_circle_24">

                    <EditText
                        android:id="@+id/editText_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:importantForAutofill="yes"
                        android:inputType="text"
                        android:padding="10dp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nestedLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTextInputLayout2"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:endIconMode="clear_text"
                    app:helperText="Required*"
                    app:helperTextTextColor="#CD1515"
                    app:startIconDrawable="@drawable/baseline_email_24">

                    <EditText
                        android:id="@+id/editTextEmailAddress2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:importantForAutofill="yes"
                        android:inputType="textEmailAddress"
                        android:padding="10dp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nestedLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTextInputLayout3"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:endIconMode="password_toggle"
                    app:helperText="Required*"
                    app:helperTextTextColor="#CD1515"
                    app:startIconDrawable="@drawable/baseline_password_24">

                    <EditText
                        android:id="@+id/editText_Password2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:importantForAutofill="yes"
                        android:inputType="textPassword"
                        android:padding="10dp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/submitView"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="25dp"
                android:backgroundTint="#7D7399"
                android:gravity="center"
                android:text="Sign up" />

            <TextView
                android:id="@+id/textViewAuthentic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/already_have_account"
                android:textSize="16sp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>